# router/Router.go
@@ -15,5 +15,6 @@ func Routs(r *gin.Engine) {
 	api := r.Group("/api")
 	{
 		api.POST("/login", controllers.Login())
+		api.GET("/hasAccess", controllers.HasAccess())
 	}
 }
